--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "csv-writer": "^1.6.0",
+    "ethereum-cryptography": "^2.1.3",
+    "nedb": "^1.8.0",
+    "sqlite3": "^5.1.7",
     "viem": "^2.7.3"
   }
 }
